controller/test/e2e/features/agentgateway/extproc/testdata/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: extproc-backend
  namespace: agentgateway-base
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: extproc-backend-0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extproc-backend-0
  namespace: agentgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: extproc-backend-0
      version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: extproc-backend-0
        version: v1
    spec:
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend-0
          ports:
            - containerPort: 3000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: backend
