controller/test/e2e/features/agentgateway/extproc/testdata/ext-proc-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-proc-grpc
  namespace: agentgateway-base
  labels:
    app: ext-proc-grpc
spec:
  ports:
  - port: 4444
    targetPort: 18080
    protocol: TCP
    appProtocol: kubernetes.io/h2c
  selector:
    app.kubernetes.io/name: ext-proc-grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-proc-grpc
  namespace: agentgateway-base
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ext-proc-grpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ext-proc-grpc
    spec:
      containers:
        - name: ext-proc-grpc
          # Source code for this image is in test/e2e/defaults/extproc
          image: ghcr.io/agentgateway/extproc-server:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 18080
